- New /whois stat(Cuboided blocks) - Shows how many blocks a player has cuboided.
- Added: /quick [Function] [Block] [Type] - Instantly complete a cuboid.
	- Functions include: cuboid, pyramid, replace, replaceall, replacenot and spheroid.
- Removed: /silentcuboid - No longer required, integrated into cuboid in necessary times. Text files are also no longer required for /pyramid

v5.0.0.0
- Added a Maps tab to the GUI.
- Added a Players tab to the GUI.
- Added a Edit Text window to the GUI.
- Added a Chat Tab to the GUI. 
- Removed the Custom Login and Logout windows (Now editable from the Players tab).
- Added Plugin API.
- Added VisualBasic Scripting (Custom Commands)
- Now Supports WOM texturing.
- Added /waypoint - creates waypoints on a map that you can move from, useful for building.
- Added /topten - Lists top ten players in several catagories. Requires MySQL.
- Added /faq -  Creates a file called faq.txt. You may put frequently asked questions in here and their answers.
- Added /maze -  Creates a maze.
- Added an ignore system:
    - Console option to allow ignoring of operators.
    - /ignore [Player] - Ignores the specified player.
    - /ignore global - Ignores global chat, does not ignore operators if not allowed.
- Added /p2p [Player 1] [Player 2] -  sends a specified player to another specified player.
- Added /draw [Shape] [Height] [Radius] -  can create cones, spheres, and pyramids, hollow spheres, and hollow pyramids. 
- Added /allowguns [Map] -  Allows or disallows gun usage on a specified level.
- Added a part to /whois that shows the total time a player has spent on a server.
- Reverted to old CLI Interface due to an issue where the server would lock up when the console used an invalid command. You no longer need to put a "/" infront of commands, for now.
- Remade the Economy system. Now consolidated into 1 command '/economy' and 1 properties file.
- /kill now works in the console.
- /slap now works in the console.