@@ -198,6 +198,7 @@ namespace MCForge
             all.Add(new CmdReplace());
             all.Add(new CmdReplaceAll());
             all.Add(new CmdReplaceNot());
+            all.Add(new CmdReport());
             all.Add(new CmdResetBot());
             all.Add(new CmdResetPass());
             all.Add(new CmdRestart());
