@@ -14,6 +14,10 @@ v5.1.0.0
 - Added: /quick [Function] [Block] [Type] - Instantly complete a cuboid.
 	- Functions include: cuboid, pyramid, replace, replaceall, replacenot and spheroid.
 - Removed: /silentcuboid - No longer required, integrated into cuboid in necessary times. Text files are also no longer required for /pyramid
+- Added: /report [Player] [Reason] - Reports a player for the specified reason.
+[For OPs] - /report check - Shows the reported list.
+		  - /report view [Player] - Views the report on the specified player.
+		  - /report remove [Player] - Removes the report on the specified player.
 
 v5.0.0.0
 - Added a Maps tab to the GUI.
